boolua_parser/src/snapshots/boolua_parser__tests__parse_and_verify_ambiguity1.snap
---
source: src/tests.rs
assertion_line: 20
expression: ast

---
Block {
    stmts: [
        Assignment(
            [
                Simple(
                    Name("a"),
                ),
            ],
            [
                Binary(
                    Prefix(
                        Var(
                            Simple(
                                Name("b"),
                            ),
                        ),
                    ),
                    Add,
                    Prefix(
                        FnCall(
                            FnCall(
                                FnCall(
                                    FnCall(
                                        Var(
                                            Simple(
                                                Name("c"),
                                            ),
                                        ),
                                        None,
                                        [
                                            Binary(
                                                Prefix(
                                                    Var(
                                                        Simple(
                                                            Name("print"),
                                                        ),
                                                    ),
                                                ),
                                                Or,
                                                Prefix(
                                                    Var(
                                                        Indexed(
                                                            Var(
                                                                Simple(
                                                                    Name("io"),
                                                                ),
                                                            ),
                                                            Str(
                                                                "write",
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ],
                                    ),
                                ),
                                None,
                                [
                                    Str(
                                        "done",
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ],
    ret: None,
}
